# uds2sovd-proxy

./: .gitignore  CODESTYLE.md  CONTRIBUTING.md  CONTRIBUTORS  Cargo.toml  LICENSE  NOTICE  README.md  clippy.toml  config.toml  deny.toml  rustfmt.toml
Doc/: Arch.puml
src/: error.rs  lib.rs  main.rs
src/doip/: alive_check.rs  diagnostic_message.rs  header.rs  header_parser.rs  mod.rs  payload.rs  routing_activation.rs  vehicle_id.rs
src/server/: config.rs  mod.rs  session.rs  tcp_handler.rs  udp_handler.rs
src/uds/: dummy_handler.rs  handler.rs  mod.rs  stub_handler.rs
tests/: integration_tests.rs  test_client_integration.rs
