[package]
name = "doip-server"
version = "0.1.0"
edition = "2021"
default-run = "doip-server"

[features]
default = ["test-handlers"]
# Enable test/stub UDS handlers - required for demo binary, not for production library use
test-handlers = []

# All dependencies are Apache-2.0 or MIT licensed, compatible with Eclipse Foundation projects:
# - tokio, tokio-util, futures: MIT
# - serde, toml: MIT OR Apache-2.0
# - tracing, tracing-subscriber: MIT
# - thiserror, anyhow: MIT OR Apache-2.0
# - bytes: MIT
# - dashmap: MIT
# - parking_lot: MIT OR Apache-2.0
# - uuid, hex: MIT OR Apache-2.0
# - clap: MIT OR Apache-2.0
# License information verified via crates.io on 2024-02-17

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
toml = "0.9.11+spec-1.1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2.0.18"
anyhow = "1.0"

# Data structures
bytes = "1.10.1"
dashmap = "6.1.0"
parking_lot = "0.12"

# Utilities
uuid = { version = "1.6", features = ["v4"] }
hex = "0.4"
clap = { version = "4.4", features = ["derive"] }

[lints.clippy]
# Enable pedantic lints (matching CDA standards)
pedantic = { level = "warn", priority = -1 }

# Exclude some too pedantic lints
similar_names = "allow"

# Additional strict lints for safety
clone_on_ref_ptr = "warn"
indexing_slicing = "deny"
unwrap_used = "deny"
arithmetic_side_effects = "deny"
